Corrective actions link change

--- a/app/views/psd-cases-area/notifications/add-another-corrective-action.html
+++ b/app/views/psd-cases-area/notifications/add-another-corrective-action.html
@@ -30,7 +30,7 @@
       </dt>
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="test-report-choice"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
+          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="product-choice-corrective-actions.html"><span aria-hidden="true">Change</span><span class="govuk-visually-hidden">Change</span></a></li>
           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
         </ul>
       </dd>
