Support documents and mandatory corrective actions

--- a/app/views/psd-cases-area/notifications/document-upload.html
+++ b/app/views/psd-cases-area/notifications/document-upload.html
@@ -20,20 +20,20 @@
       <form class="form govuk-!-margin-bottom-6" action="task-list" method="post">
 
       <span class="govuk-caption-l">{{title}}</span>
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-1">Add supporting images</h1>
-
-    <div class="govuk-inset-text">
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-1">Add supporting documents</h1>
+      
+       <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
     <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
     <p class="govuk-body-l">All in All+ Car Seat, Fika Forrest CT4243</p>
   </div>
 
-        <div class="govuk-body">To provide visual evidence of the product hazard or incident/accident, you can upload either a single image or multiple images to the notification.</div>
+        <div class="govuk-body">To provide proof of the product hazard or accident, you can upload supporting documents with your notification.</div>
 
 
         <div>
       <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="title">Image title</label>
+          <label class="govuk-label govuk-label--m" for="title">Document title</label>
           <input class="govuk-input" id="title" name="document[title]" type="text">
 
       </div>
@@ -44,7 +44,7 @@
 <div class="govuk-hint" id="file_upload-hint"></div>
 <input class="govuk-file-upload" id="file_upload" name="image_upload[file_upload]" type="file" aria-describedby=" file_upload-hint"></div>
 
-<div class="govuk-hint">Acceptable file formats: GIF, JPEG, PNG, WEBP or HEIC/HEIF. Maximum file size: 100MB.</div>
+<div class="govuk-hint">Acceptable file formats: DOC, PDF, EXCEL, POWERPOINT or TXT. Maximum file size: 100MB.</div>
 
 
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -64,7 +64,7 @@
         </dd>
   <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="#">
-        Remove<span class="govuk-visually-hidden"> receipt1.jpg</span>
+        Remove<span class="govuk-visually-hidden"> receipt1.doc</span>
     </a>
 </dd>
 </div>
@@ -73,19 +73,19 @@
 </div>
 
 <a href="#\" class="govuk-button govuk-button--secondary" data-module="govuk-button" id="image-upload-cta" style="text-decoration:none;">
-  Upload image
+  Upload document
 </a>
 
 <br/>
       <button class="govuk-button" data-module="govuk-button">
-  Save and finish image upload
+  Save and finish document upload
 </button>
 
 
     </div>
   </div>
 
-  <input class="govuk-checkboxes__input" id="section-4c-complete" name="section-4c-complete" type="checkbox" value="yes" { checked('section-4c-complete','yes') }} checked>
+  <input class="govuk-checkboxes__input" id="section-4c1-complete" name="section-4c1-complete" type="checkbox" value="yes" { checked('section-4c1-complete','yes') }} checked>
 
   </form>
 
