--- a/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
+++ b/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
@@ -26,6 +26,7 @@
     <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
         Do you want to record the corrective actions taken for the products?
+        Can you record the corrective actions taken for the products?
       </h1>
 
     </legend>
