--- a/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
+++ b/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
@@ -42,6 +42,9 @@
         <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
           No
         </label>
+        <p>• I need to refer the notification to another authority</p>
+        <p>• I don't have enough information to record a corrective action</p>
+        <p>• Other</p>
       </div>
 
 
