--- a/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
+++ b/app/views/psd-cases-area/notifications/record-corrective-actions-choice.html
@@ -25,27 +25,44 @@
 
     <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
-        Can you record the corrective actions taken for the unsafe product?
+        Have you already taken a corrective action for the unsafe product(s)?
       </h1>
 
     </legend>
+
+   <p class="govuk-hint"> Select only one option.</p>
 
     <div class="govuk-radios" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
-          Yes
+          Yes, I have taken a corrective action.
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
-          No
-        </label>
-        <p>• I need to refer the notification to another authority</p>
-        <p>• I don't have enough information to record a corrective action</p>
-        <p>• Other</p>
+          No, I need to refer the issue to another authority.
       </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+          No, I don't have enough information to take a corrective action. 
+      </div>
+
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+          No, I have another reason for not taking a corrective action. 
+      </div>
+
+        </label>
+
+       </div>
+
+
+  
 
 
        <div class="govuk-button-group govuk-!-margin-top-6">
