--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -589,7 +589,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
     <!-- Section 6 -->
 
-    {% if checked("section-3-complete", "yes") %}
+    {% if checked("section-4a-complete", "yes") %}
 
 <li>
   <h2 class="app-task-list__section">
