--- a/app/views/psd-cases-area/notifications/no-corrective-actions-message.html
+++ b/app/views/psd-cases-area/notifications/no-corrective-actions-message.html
@@ -24,7 +24,7 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
-       You can record the corrective action later
+       You can record the corrective action later.
       </h1>
 
       <p>You have the option to add the corrective action after your initial notification submission.</p>
