Add and remove product from notification

--- a/app/views/psd-cases-area/notifications/added-products-summary-ndetails.html
+++ b/app/views/psd-cases-area/notifications/added-products-summary-ndetails.html
@@ -21,13 +21,8 @@
 
     <span class="govuk-caption-l">{{title}}</span>
     <h1 class="govuk-heading-l">Search for or add a product<h1>
-    {% if checked("section-1a-complete", "yes") %}
-    <p>You have added 2 products to the notification.</p>
-    {% else %}
-     <p>You have added 1 product to the notification.</p>
-
-     {% endif %}
-
+    <p>You have either started or completed adding notification details for 2 products. If removal of any products is necessary, please delete the current notification and start a new one.</p>
+     
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
     <dl class="govuk-summary-list">
@@ -38,7 +33,7 @@
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
           <!-- <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="../../psd-revised-flow/product-page"><span aria-hidden="true">View</span><span class="govuk-visually-hidden">View</span></a></li> -->
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="delete-product-to-notify"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
+          <!-- <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="delete-product-to-notify"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li> -->
         </ul>
       </dd>
     </div>
@@ -54,7 +49,7 @@
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
           <!-- <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">View</span><span class="govuk-visually-hidden"></span></a></li> -->
-          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li>
+          <!-- <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#"><span aria-hidden="true">Remove</span><span class="govuk-visually-hidden">Remove</span></a></li> -->
         </ul>
       </dd>
     </div>
