--- a/app/views/psd-revised-flow/product-page-car-seat.html
+++ b/app/views/psd-revised-flow/product-page-car-seat.html
@@ -69,7 +69,7 @@ Product psd-304
 
         <div class="govuk-button-group">
 
-                <button type="submit" class="govuk-button" data-module="govuk-button">Add to product safety notification</button>
+                <!-- <button type="submit" class="govuk-button" data-module="govuk-button">Add to product safety notification</button> -->
 
  <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Start a new risk assessment
@@ -307,7 +307,7 @@ protocol and contain components that can potentially become defective.
 
          <div class="govuk-button-group">
 
-                <a class="govuk-button" href="../../psd-cases-area/notifications/task-list"> Add to product safety notification</a>
+                <!-- <a class="govuk-button" href="../../psd-cases-area/notifications/task-list"> Add to product safety notification</a> -->
 
  <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Start a new risk assessment
