--- a/app/views/psd-cases-area/notifications/product-search-enhanced-v2-a.html
+++ b/app/views/psd-cases-area/notifications/product-search-enhanced-v2-a.html
@@ -12,7 +12,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
-         <form action="task-list" accept-charset="UTF-8" method="get" role="search" novalidate>
+       <form action="task-list" accept-charset="UTF-8" method="get">
 
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l">Choose the product for the notification</span>
@@ -32,8 +32,6 @@
 
   </div>
 </div>
-
-<form action="task-list" accept-charset="UTF-8" method="get" role="search" novalidate>
   
     <div class="govuk-grid-row opss-full-height">
   
@@ -169,7 +167,7 @@
       <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">1</a>
 </td> -->
 
- <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><a href="#">Add</a>
+ <td class="govuk-table__cell" class="govuk-body-s" style="text-align: right"><button type="submit" class="govuk-link" style="border:none; background:none; font-size: 19px; color:#4c2c92;">Add</button>
 </td>
 
 
@@ -268,7 +266,7 @@
   
     </div>
 
-    <input class="govuk-checkboxes__input" id="section-1-complete" name="section-1-complete" type="checkbox" value="yes" { checked('section-1-complete','yes') }} checked>
+    <input class="govuk-checkboxes__input" id="section-1a-complete" name="section-1a-complete" type="checkbox" value="yes" { checked('section-1a-complete','yes') }} checked>
 
 </form>
 
