--- a/app/views/psd-revised-flow/inner-home-page/home-03.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-03.html
@@ -52,7 +52,7 @@ Home
     <h3 class="gem-c-heading govuk-heading-s govuk-!-margin-bottom-2">
   <a class="govuk-link chevron-card__link" href="../../psd-cases-area/notifications/task-list">2. Create a product safety notification</a>
 </h3>
-    <p class="govuk-body chevron-card__description">Start notification for selected unsafe or non-compliant products </p>
+    <p class="govuk-body chevron-card__description">Start notification for already selected unsafe or non-compliant products </p>
   </div>
 </li>
 
