--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,6 +51,9 @@
 
  <p><a href="indexxx">Index with links</a></p>
 
+ <p><a href="/psd-revised-flow/add-business-to-notification/notification-task-list.html">Add business to notification</a></p>
+
+
 
 
 
