--- a/app/views/psd-revised-flow/add-business-to-notification/added-business-summary.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/added-business-summary.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-  Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
+  Business added – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Add businesses and their roles in the supply chain " %}
@@ -26,7 +26,7 @@
     <dl class="govuk-summary-list ">
     <div class="govuk-summary-list__row ">
       <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
-        <b>Bartholomew Trading Ltd</b> <br/><span class="govuk-body-s">Online seller, Importer, Distributor</span>
+        <b>{{ data['business-details-trading_name'] }}</b> <br/><span class="govuk-body-s">Online seller, Importer, Distributor</span>
       </dt>
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
         <ul class="govuk-summary-list__actions-list">
