--- a/app/views/psd-revised-flow/add-business-to-notification/notification-task-list.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/notification-task-list.html
@@ -110,7 +110,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a href="all-businesses">Search or add businesses and select their roles</a>            
+            <a href="search-businesses">Search or add businesses and select their roles</a>            
          </span>
          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
        </li>
