--- a/app/views/psd-revised-flow/add-business-to-notification/edit-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/edit-business-details.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-  Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
+Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Upload multiple products" %}
@@ -20,10 +20,10 @@
  <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form govuk-!-margin-bottom-6" action="add-another-business" method="post">
+    <form class="form govuk-!-margin-bottom-6" action="edit-business-details" method="post">
 
       <span class="govuk-caption-l">{{title}}</span>
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Enter the business details</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Edit the business details</h1>
       <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Company details</legend>
 
@@ -39,6 +39,12 @@
   <input class="govuk-input govuk-!-width-two-thirds" id="legal_name" name="add_business_to_case_form[legal_name]" type="text" aria-describedby="legal_name-hint">
 </div>
 
+<div class="govuk-form-group">
+  <label class="govuk-label" for="ch_number">Companies House number</label>
+  <div class="govuk-hint govuk-!-font-size-16" id="ch_number-hint">In the UK this is an eight-digit number assigned to incorporated businesses.</div>
+<input class="govuk-input govuk-!-width-two-thirds" id="ch_number" name="add_business_to_case_form[ch_number]" type="text" aria-describedby="ch_number-hint">
+</div>
+
 </fieldset>
 
   <fieldset class="govuk-fieldset govuk-!-margin-bottom-6" aria-describedby="address-hint">
@@ -47,13 +53,13 @@
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Address 1</legend>
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_city">Address line 1</label>
-  <input class="govuk-input govuk-!-width-two-thirds" id="add_business_to_case_form_locations_attributes_0_city" name="add_business_to_case_form[locations_attributes][0][city]" type="text">
+    <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_address_1">Address line 1</label>
+  <input class="govuk-input govuk-!-width-two-thirds" id="add_business_to_case_form_locations_attributes_0_address_1" name="add_business_to_case_form[locations_attributes][0][address_1]" type="text">
 </div>
 
 <div class="govuk-form-group">
-  <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_city">Address line 2</label>
-<input class="govuk-input govuk-!-width-two-thirds" id="add_business_to_case_form_locations_attributes_0_city" name="add_business_to_case_form[locations_attributes][0][city]" type="text">
+  <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_address_2">Address line 2</label>
+<input class="govuk-input govuk-!-width-two-thirds" id="add_business_to_case_form_locations_attributes_0_address_2" name="add_business_to_case_form[locations_attributes][0][address_2]" type="text">
 </div>
 
   <div class="govuk-form-group">
